<resources>
    <string-array name="Horse_inDropMenu">
        <item>Amos</item>
        <item>Bud</item>
        <item>Arabia</item>
        <item>Jerry</item>
        <item>New Horse</item>
    </string-array>
    <string name="app_name">Stable Lyfe</string>
    <string name="stable_lyfe_logo_login_screen">Stable Lyfe</string>
    <string name="email_address_login_screen">Email Address</string>
    <string name="password_login_screen">Password</string>
    <string name="remember_me_login_screen">Remember Me</string>
    <string name="login_button_login_screen">Login</string>
    <string name="sign_up_button_login_screen">Sign Up</string>
    <string name="my_barn_stablers_home_page">My Barn</string>
    <string name="add_remove_horses_stablers_home_page">Add/Remove Horses</string>
    <string name="shopping_around_stablers_home_page">Shopping Around</string>
    <string name="training_stablers_home_page">Training</string>
    <string name="finding_vets_trainers_farriers_stablers_home_page">Finding Vets/Trainers/Farriers</string>
    <string name="sign_up_with_email_sign_up_choice_screen">Sign up with email</string>
    <string name="sign_up_with_google_sign_up_choice_screen">Sign up with google</string>
    <string name="username_create_login_with_email">Username</string>
    <string name="email_create_login_with_email">Email</string>
    <string name="password_create_login_with_email">Password</string>
    <string name="re_enter_password_create_login_with_email">Re-enter Password</string>
    <string name="select_the_option_for_how_you_will_be_using_the_app_create_login_with_email">Select the option for how you will be using the app?</string>
    <string name="horse_owner_check_box_create_login_with_email">Horse Owner</string>
    <string name="stabler_check_box_create_login_with_email">Stabler</string>
    <string name="sign_up_button_create_login_with_email">Sign Up</string>
    <string name="my_horse_owners_home_page">My Horse</string>
    <string name="check_in_horse_owners_home_page">Check In Horse</string>
    <string name="shopping_around_owners_home_page">Shopping Around</string>
    <string name="training_owners_home_page">Training</string>
    <string name="finding_vets_trainers_farriers_owners_home_page">Finding Vets/Trainers/Farriers</string>
    <string name="browse_saddles_shopping_page">Browse Saddles</string>
    <string name="browse_saddle_pads_shopping_page">Browse Saddle Pads</string>
    <string name="browse_bits_shopping_page">Browse Bits</string>
    <string name="browse_bridles_shopping_page">Browse Bridles</string>
    <string name="browse_grooming_tools_shopping_page">Browse Grooming Tools</string>
    <string name="western_pleasure_training_training_page">Western Pleasure Training</string>
    <string name="western_reining_training_training_page">Western Reining Training</string>
    <string name="english_dressage_training_training_page">English Dressage Training</string>
    <string name="english_show_jumping_training_training_page">English Show Jumping Training</string>
    <string name="stable_barn_pic_drawable">TODO</string>
    <string name="placeholder_pic">TODO</string>
    <string name="selectall">Select All</string>
    <string name="add_horse">Add Horse</string>
    <string name="number_of_horses">5/5</string>
    <string name="horses_for_num_of">Horses</string>
    <string name="horse_icon">horseicon</string>
    <string name="check_box_for_horse_1">check box for horse 1</string>
    <string name="horse_icon_2">horse icon 2</string>
    <string name="horse_icon_3">horse icon 3</string>
    <string name="horse_icon_4">horse icon 4</string>
    <string name="horse_icon_5">horse icon 5</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calender_frag">calenderFrag</string>
    <string name="calender_photo">calender photo</string>
    <string name="check_box_for_horse_2">check box for horse 2</string>
    <string name="check_box_for_horse_3">check box for horse 3</string>
    <string name="check_box_for_horse_4">check box for horse 4</string>
    <string name="check_box_for_horse_5">check box for horse 5</string>
    <string name="primary_care_mass_messaging">Primary Care</string>
    <string name="speciality_care_mass_messaging">Speciality Care</string>
    <string name="large_text">

        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>