<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_background"
    tools:context=".OwnersHomePage">

    <Button
        android:id="@+id/button11"
        android:layout_width="295dp"
        android:layout_height="80dp"
        android:background="@drawable/btn_custom_oval"
        android:text="@string/my_horse_owners_home_page"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.205" />

    <Button
        android:id="@+id/button12"
        android:layout_width="295dp"
        android:layout_height="80dp"
        android:background="@drawable/btn_custom_oval"
        android:text="@string/check_in_horse_owners_home_page"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button11"
        app:layout_constraintVertical_bias="0.052" />

    <Button
        android:id="@+id/button13"
        android:layout_width="295dp"
        android:layout_height="80dp"
        android:background="@drawable/btn_custom_oval"
        android:text="@string/shopping_around_owners_home_page"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button12"
        app:layout_constraintVertical_bias="0.065" />

    <Button
        android:id="@+id/button14"
        android:layout_width="295dp"
        android:layout_height="80dp"
        android:background="@drawable/btn_custom_oval"
        android:text="@string/training_owners_home_page"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button13"
        app:layout_constraintVertical_bias="0.152" />

    <Button
        android:id="@+id/button15"
        android:layout_width="295dp"
        android:layout_height="80dp"
        android:background="@drawable/btn_custom_oval"
        android:text="@string/finding_vets_trainers_farriers_owners_home_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button14"
        app:layout_constraintVertical_bias="0.344" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="329dp"
        android:layout_height="91dp"
        android:contentDescription="@string/stable_barn_pic_drawable"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/horsebarn" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="80dp"
        android:layout_height="91dp"
        android:contentDescription="@string/placeholder_pic"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/horselogo" />

</androidx.constraintlayout.widget.ConstraintLayout>