<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StableLyfeTraining">

    <Button
        android:id="@+id/button21"
        android:layout_width="295dp"
        android:layout_height="80dp"
        android:text="@string/western_pleasure_training_training_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.325" />

    <Button
        android:id="@+id/button22"
        android:layout_width="295dp"
        android:layout_height="80dp"
        android:text="@string/western_reining_training_training_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button21"
        app:layout_constraintVertical_bias="0.091" />

    <Button
        android:id="@+id/button23"
        android:layout_width="295dp"
        android:layout_height="80dp"
        android:text="@string/english_dressage_training_training_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button22"
        app:layout_constraintVertical_bias="0.142" />

    <Button
        android:id="@+id/button24"
        android:layout_width="295dp"
        android:layout_height="80dp"
        android:text="@string/english_show_jumping_training_training_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button23"
        app:layout_constraintVertical_bias="0.259" />
</androidx.constraintlayout.widget.ConstraintLayout>