<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_background"
    tools:context=".StablersHomePage">

    <Button
        android:id="@+id/button3"
        android:layout_width="305dp"
        android:layout_height="95dp"
        android:background="@drawable/btn_custom_oval"
        android:text="@string/my_barn_stablers_home_page"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.059" />

    <Button
        android:id="@+id/button4"
        android:layout_width="305dp"
        android:layout_height="95dp"
        android:background="@drawable/btn_custom_oval"
        android:text="@string/add_remove_horses_stablers_home_page"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_bias="0.082" />

    <Button
        android:id="@+id/button5"
        android:layout_width="305dp"
        android:layout_height="95dp"
        android:background="@drawable/btn_custom_oval"
        android:text="@string/shopping_around_stablers_home_page"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:layout_constraintVertical_bias="0.108" />

    <Button
        android:id="@+id/button6"
        android:layout_width="305dp"
        android:layout_height="95dp"
        android:background="@drawable/btn_custom_oval"
        android:text="@string/training_stablers_home_page"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        app:layout_constraintVertical_bias="0.171" />

    <Button
        android:id="@+id/button7"
        android:layout_width="305dp"
        android:layout_height="95dp"
        android:background="@drawable/btn_custom_oval"
        android:text="@string/finding_vets_trainers_farriers_stablers_home_page"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />
</androidx.constraintlayout.widget.ConstraintLayout>